# kcc

./: LICENSE  meson.build
src/: lexer.c  lexer.h  list.c  list.h  meson.build
tests/: lexer.c  list.c  meson.build
