# Copyright (c) Kyrylo Polezhaiev and contributors. All rights reserved.
# Released under the MIT license. See LICENSE file in the project root for full license information.
  
project('kcc', 'c',
    version : '0.1',
    license : 'MIT',
    meson_version : '>= 0.49.1',
    default_options : [
        'warning_level=1',
        'buildtype=debug',
        'c_std=c11'
    ]
)

subdir('src')
subdir('tests')
